# git-release

./: Cargo.toml  README.md  bacon.toml  build.rs
.github/: labeler.yml
.github/workflows/: integration.yml
src/: args.rs  common_test.rs  gh.rs  main.rs
src/workspace/: commit.rs  commit_test.rs  commit_tests.rs  errors.rs  mod.rs  release.rs  release_test.rs  repository.rs  repository_test.rs  repository_tests.rs  tests.rs
