[package]
name = "git-release"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.15"
lazy_static = "1.4"
regex = "1.7"
structopt = { version = "0.3", features = ["color"] }
octocrab = "0.18"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
colored = "2"

[dev-dependencies]
tempfile = "3.3"
difference = "2"

[build-dependencies]
clap = "4"
