[package]
name = "git-release"
version = "0.1.1"
edition = "2021"
authors = ["Arsham Shirvani"]
documentation = "https://docs.rs/crate/git-release"
repository = "https://github.com/arsham/git-release"
keywords = ["git", "github", "release"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
description = "Set the release information based on all commits of a tag"

[dependencies]
git2 = "0.15"
lazy_static = "1.4"
regex = "1.7"
structopt = { version = "0.3", features = ["color"] }
octocrab = "0.18"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
colored = "2"

[dev-dependencies]
tempfile = "3.3"
difference = "2"
pretty_assertions = "1"
